conformance/tests/gateway-observed-generation-bump.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-observed-generation-bump
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      hostname: "bar.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
